# mcp-git-test

./: README.md
backend/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
